# encprocessor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
dataexapmles/: database.txt
include/encprocessor/core/: oedata.h  oefile.h
src/core/: encdata.h  iedata.cpp  iedata.h  iefile.cpp  oedata.cpp  oedata.h  oefile.cpp
src/crypto/: aes.cpp
src/encprocessor/core/: encdata.cpp  encdata.h  encfile.cpp  encfile.h  iedata.cpp  iedata.h  iefile.cpp  iefile.h  oedata.cpp  oefile.cpp
src/error/: error.cpp  error.h
tests/: main.cpp  tests.cpp  tests.h
tmp/: CMakeLists.txt  Makefile  database.enc
